# yantra-hack

./: API_QUICK_REFERENCE.md  API_SPECIFICATION.md  ARCHITECTURE.md  DATA_COLLECTION_COMPLETE.md  FINAL_DATA_STATUS.md  FLUTTER_WEB_STATUS.md  FREE_DATA_SOURCES.md  PIPELINE_SUMMARY.md  README.md  REDESIGN_COMPLETE.md  REQUEST_PAYLOADS.md  init.md  test_all_coins_cryptocompare.py  test_binance_historical.sh  test_cryptocompare_direct.py
backend/: .env  .env.example  DATA_COLLECTION_STATUS.md  IMPLEMENTATION_STATUS.md  PLAN_VERIFICATION.md  README.md  REORG_DETECTION_STATUS.md  crash_collection_log.txt  main.py  pyproject.toml
backend/data/bac_recent/: bac_unified.csv  bac_unified.parquet  summary_stats.json
backend/data/luna_crash/: luna_unified.csv  luna_unified.parquet  summary_stats.json  ust_unified.csv  ust_unified.parquet
backend/data/usdd_recent/: summary_stats.json  usdd_unified.csv  (+1 more)
backend/src/: main.py
data/luna_crash/: luna_crash_unified.csv  luna_crash_unified.parquet  luna_onchain_events.json  lunausdt_klines.json  summary_stats.json  ustusdt_klines.json
flutter/: .flutter-plugins-dependencies  pubspec.yaml
flutter/lib/: main.dart
flutter/test/: risk_state_test.dart
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  StablecoinDashboard.jsx
logger/: .gitignore  API.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  setup.sh  test_api.sh
logger/api/: .env.example  Cargo.toml  schema.sql
logger/api/examples/: generate_keypair.rs
logger/api/src/: db.rs  handlers.rs  main.rs  models.rs  solana.rs
(+87 files in other folders)
