[package]
name = "solana-logger-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"
actix-rt = "2.10"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Solana
solana-client = "2.1"
solana-sdk = "2.1"
solana-program = "2.1"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Path expansion
shellexpand = "3.1"

[dev-dependencies]
reqwest = "0.12"
